<resources>
    <string-array name="listBoomMenu">
        <item>Drug</item>
        <item>Cart</item>
        <item>News</item>
        <item>Account</item>
        <item>Order</item>
        <item>About us</item>
    </string-array>

    <string name="app_name">DRUG STORE ONLINE</string>
    <string name="loading">Loading...</string>
    <string name="no_connection">No connection</string>
    <string name="ok">Ok</string>
    <string name="text_ask_buy">What do you want to buy?</string>
    <string name="text_not_remember_drug">Not remember name of the drug?</string>
    <string name="search_hint">search...</string>
    <string name="name">Name</string>
    <string name="expire_date">Expire Date</string>
    <string name="map_api_key">AIzaSyA7Ze1-tsSi1lBgGoUPMnvATyllLExXbMI</string>
    <string name="error_store_name">Error store name</string>
    <string name="store">Store</string>
    <string name="no_more_product">No more product in stock</string>
    <string name="change_pass">Change Password</string>
    <string name="save">Save</string>
    <string name="old_pass">old pass</string>
    <string name="new_pass">New pass</string>
    <string name="new_pass1">New pass again</string>
    <string name="title_about_us">We give you the lowest prices on all your needs.</string>
    <string name="message_about_us">Our Vision Our vision is delivering happiness to customers, employees and vendors.  Our Goal We believe in the power of technology transformation and want to change the world better by providing the platform to connect buyers and sellers in the same community. We continuously improve our platform to bring an enjoyable shopping experience to all our users.</string>
    <string name="version">Version 1.0.0</string>
    <string name="copy_right">Copyright @ 2017 | 14T3</string>
    <string name="get_cart_empty">Get list cart empty!</string>
    <string name="have_no_order">You don\'t have order</string>
    <string name="delete_cart">Delete this cart?</string>
    <string name="yes">Yes</string>
    <string name="delete_success">Delete success!</string>
    <string name="no">No</string>
    <string name="cart">Cart</string>
    <string name="detail_product">Detail product</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="fill_full_infor">You need fill full information</string>
    <string name="product">Product</string>
    <string name="password_not_match">Password not match</string>
    <string name="email_not_right">Email not right format</string>
    <string name="register_success">Register success!</string>
    <string name="register_fail">Register fail!</string>
    <string name="login_fail">Login fail!</string>
    <string name="login_success">Login success!</string>
    <string name="news">News</string>
    <string name="list_product">List product</string>
    <string name="order">Order</string>
    <string name="phone_not_right">Phone not right format</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="want_to_login">You don\'t have account,you want to login</string>
    <string name="payment_success">Payment success!</string>
    <string name="not_enough">not enough</string>
    <string name="product_in_stock">product in stock.</string>
    <string name="payment">Payment</string>
    <string name="product_category">Product\'s category</string>
    <string name="want_to_logout">Do you want to logout?</string>
    <string name="want_to_edit">Do you want to edit?</string>
    <string name="edit_success">Edit success!</string>
    <string name="two_password_not_match">The two password fields did not match</string>
    <string name="change_pass_success">Change password success</string>
    <string name="change_pass_error">Change password error</string>
    <string name="profile">Profile</string>
    <string name="get_list_product_error">Get list product error</string>
    <string name="address">Address</string>
    <string name="contact">Contact</string>
    <string name="drug_store">Drug Store</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="skip">Skip</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="register">Register</string>
    <string name="more_information">More information</string>
    <string name="commemt">Comment</string>
    <string name="login_to_comment">Login to comment</string>
    <string name="have_no_list_cart">Have no list cart</string>
    <string name="total">Total</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="edit">Edit</string>
    <string name="logout">Log out</string>
    <string name="phone">Phone number</string>
    <string name="ship_code">Ship code</string>
    <string name="paypal">Paypal</string>
    <string name="cancel">Cancel</string>
    <string name="store_product">Store product</string>
    <string name="code">Code:</string>
    <string name="price">Price:</string>
    <string name="status_payment">Status payment:</string>
    <string name="status_order">Status order:</string>
    <string name="in_stock">In stock:</string>
    <string name="quantity">Quantity:</string>
    <string name="detail"><![CDATA[>>>Detail]]></string>

</resources>
