<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:gravity="center"
       android:layout_margin="30dp">
       <EditText
           android:id="@+id/edit_email_login"
           android:background="@drawable/background_login_edit"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/email"
           android:maxLines="1"
           android:inputType="textEmailAddress"
           android:layout_margin="5dp"/>
       <EditText
           android:id="@+id/edit_pass_login"
           android:background="@drawable/background_login_edit"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/password"
           android:maxLines="1"
           android:inputType="textPassword"
           android:layout_margin="5dp"/>
       <Button
           android:background="@color/colorPrimary"
           android:textColor="@android:color/white"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/sign_in"
           android:layout_margin="5dp"
           android:onClick="signInOnlick"/>
       <Button
           android:background="@color/colorPrimary"
           android:textColor="@android:color/white"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/skip"
           android:layout_margin="5dp"
           android:onClick="skipOnclick"/>
       <TextView
           android:layout_marginTop="20dp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/dont_have_account"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@color/colorPrimary"
           android:text="@string/register"
           android:textSize="18sp"
           android:onClick="textRegisterOnlcick"/>
   </LinearLayout>
</LinearLayout>