<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.payment.PaymentActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PAYMENT"
            android:textSize="40sp"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:id="@+id/edit_fname_payment"
            android:hint="@string/first_name"
            android:maxLines="1"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_login_edit"/>
        <EditText
            android:id="@+id/edit_lname_payment"
            android:hint="@string/last_name"
            android:maxLines="1"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_login_edit"/>
        <EditText
            android:id="@+id/edit_phone_payment"
            android:hint="@string/phone"
            android:maxLines="1"
            android:inputType="number"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_login_edit"/>
        <EditText
            android:id="@+id/edit_address_payment"
            android:hint="@string/address"
            android:maxLines="1"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_login_edit"/>
        <RadioGroup
            android:id="@+id/group_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radio_ship_code"
                android:buttonTint="@color/colorPrimary"
                android:checked="true"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ship_code" />
            <RadioButton
                android:id="@+id/radio_paypal"
                android:buttonTint="@color/colorPrimary"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paypal"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button_cancel_payment"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:onClick="paymentOnClick"/>
        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/button_ok_payment"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:onClick="paymentOnClick"/>
    </LinearLayout>
</LinearLayout>