<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/button_change_close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="32dp"
            android:background="@android:drawable/ic_menu_close_clear_cancel" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/change_pass"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/text_change_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_old_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/background_login_edit"
        android:hint="@string/old_pass"
        android:inputType="textPassword"
        android:maxLines="1" />

    <EditText
        android:id="@+id/edit_new_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/background_login_edit"
        android:hint="@string/new_pass"
        android:inputType="textPassword"
        android:maxLines="1" />

    <EditText
        android:id="@+id/edit_new_pass1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/background_login_edit"
        android:hint="@string/new_pass1"
        android:inputType="textPassword"
        android:maxLines="1" />
</LinearLayout>
